# inspect_demo

./: .gitignore  LICENSE  README.md  analysis.ipynb  main.py  mmlu.py  pyproject.toml
assets/logs-www/: index.html
assets/logs-www/logs/: 2025-07-30T18-42-38+00-00_mmlu_ZYEnfbu3nstBuwzjiAGzuG.eval
docs/logs/: listing.json
