[project]
name = "inspect-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "inspect-ai>=0.3.116",
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "openai>=1.98.0",
    "seaborn>=0.13.2",
]
